[package]
name = "ideno-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "=1.0.131", features = ["derive"] }
zeromq = { version = "0.3.1", default-features = false, features = ["tcp-transport", "tokio-runtime"] }
serde_json = { version = "1.0.66", features = ["preserve_order"] }
tokio = { version = "1.14.0", features = ["full"] }
